[package]
name = "bevy_stokes"
version = "0.1.0-alpha.2"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2021"
keywords = ["bevy", "udp", "networking"]
homepage = "https://github.com/hlb8122/bevy_stokes"
repository = "https://github.com/hlb8122/bevy_stokes"
description = """
A bevy plugin providing a thin and ergonomic wrapper around laminar.
"""
license = "MIT"
categories = ["game-development", "network-programming"]

[dependencies]
bevy = "0.6.1"
laminar = "0.5.0"

serde = { version = "1.0", optional = true, default-features = false }
